Add email verification, password reset, fix scripts and collation issues
- Add verification module: email verification and password reset flows
  with secure token hashing (SHA-256) and configurable expiration
- Fix script bugs: wrong project dir in run.sh, wrong SQL path in
  setup-mysql-db.sh, grep -P incompatible with macOS, and command
  injection in generate-password.sh
- Fix FK collation mismatch: standardize database and all tables on
  utf8mb4_unicode_ci so Hibernate auto-DDL creates compatible columns
- Fix misnamed index idx_roles_active -> idx_auth_users_active
- Remove redundant idx_filename index on cms_file (covered by unique key)
- Update auth module code, CMS module, design docs, and Postman collection

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>